--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,25 @@
 :root {
   box-sizing: border-box;
-  font-size: 1rem;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
+  min-height: 100vh;
+
+  display: grid;
+  place-items: center;
   background-color: pink;
+}
+
+button {
+  font-size: 0.6rem;
+  padding: 0.2rem;
 }
