--- a/src/components/centeredOverlay/style.css
+++ b/src/components/centeredOverlay/style.css
@@ -10,7 +10,7 @@
 
   background-color: rgba(0, 0, 0, 0.5);
 
-  transition: opacity 2s ease-in-out;
+  transition: opacity 500ms ease-in-out;
 }
 
 .centeredOverlay.hidden {
